src-ken&y/objects/Service_Configuration__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Stores service/integration settings</description>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of the service configuration.</description>
        <inlineHelpText>Description of the service configuration.</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <description>Password ( if required) to access the service.</description>
        <inlineHelpText>Password ( if required) to access the service.</inlineHelpText>
        <label>Password</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Session_Token__c</fullName>
        <label>Session Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <description>username to access this service.</description>
        <inlineHelpText>username to access this service.</inlineHelpText>
        <label>Username</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Service Configuration</label>
</CustomObject>